# -WIP-Mid-C-Compiler

./: .gitignore  CMakeLists.txt  LICENSE  README
src/: array_lit.c  array_lit.h  ast.c  ast.h  attrib.h  bin_to_unary.c  bin_to_unary.h  bool.h  code_gen.c  code_gen.h  comp_args.c  comp_args.h  comp_args_help.c  comp_args_help.h  compile_via_ir.c  compile_via_ir.h  const_fold.c  const_fold.h  err_msg.c  err_msg.h  expr_verify.c  file_io.c  identifier.c  identifier.h  ints.h  lexer.c  lexer.h  macros.h  main.c  merge_strings.c  parser.c  parser.h  parser_var.c  parser_var.h  pre_proc.c  pre_proc.h  pre_to_post_fix.c  pre_to_post_fix.h  prim_type.c  prim_type.h  (+18 more)
src/backend_dependent/: type_sizes.h
src/comp_dependent/: ints.h
src/front_end/: ast.c  ast.h  bin_to_unary.c  const_fold.c  const_fold.h  expr_verify.c  identifier.c  identifier.h  lexer.c  lexer.h  merge_strings.c  merge_strings.h  parser.c  parser.h  parser_var.c  parser_var.h  pre_to_post_fix.c  shunting_yard.c  shunting_yard.h  token.c  token.h  type_spec.c  type_spec.h  typedef.c  typedef.h
src/ir/: README  array_lit.c  array_lit.h  basic_block.c  basic_block.h  block_dom.c  block_dom.h  data_type_to_str.c  data_type_to_str.h  data_types.c  data_types.h  dom_frontier.c  dom_frontier.h  func.c  func.h  instr.c  instr.h  instr_const_fold.c  ir_gen.c  ir_gen.h  ir_instr_to_str.c  ir_instr_to_str.h  ir_to_str.c  ir_to_str.h  module.c  module.h  name_mangling.c  name_mangling.h  opt_alloca.c  opt_alloca.h  opt_copy_prop.c  opt_copy_prop.h  (+6 more)
tests/: a  a.c  a.ir  a.s  assemble.sh  build.sh  fib.c
(+73 files in other folders)
